<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. Aravind Chowdary
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    tools:context=".ProfilePictureDownloader">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@color/grey_100"
            android:elevation="0dp"
            app:title="@string/toolbar_title_profile_dp_downloader"
            app:titleTextAppearance="@style/ToolbarTitleTextAppearance" />

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/pbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:progressDrawable="@drawable/progressbar_primary"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <FrameLayout
                android:id="@+id/layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_max="320dp"
                app:layout_constraintHeight_percent="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="320dp"
                app:layout_constraintWidth_percent="0.8">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:minHeight="200dp"
                    android:src="@drawable/ic_outline_account_circle_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="20dp"
                    android:padding="16dp"
                    android:visibility="gone"
                    app:backgroundTint="?colorAccent"
                    app:fabSize="normal"
                    app:srcCompat="@drawable/ic_file_download"
                    app:tint="@android:color/white" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textlayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/text_username_hint"
                app:layout_constraintBottom_toTopOf="@id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"
                app:layout_constraintWidth_percent="0.8"
                app:prefixText="\@ ">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="getProfilePicture"
                android:text="@string/button_get_profile_pic"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/textlayout"
                app:layout_constraintStart_toStartOf="@id/textlayout"
                app:layout_constraintTop_toBottomOf="@id/textlayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>